@@ -143,13 +143,14 @@ t/05_Dialog.t
 t/0611_Dialog_Scan_Sane.t
 t/0612_Dialog_Scan_Sane.t
 t/0613_Dialog_Scan_Sane.t
-t/063_Dialog_Scan_CLI.t
-t/064_Dialog_Scan_CLI.t
-t/065_Dialog_Scan_CLI.t
-t/066_Dialog_Scan_CLI.t
-t/067_Dialog_Scan_CLI.t
-t/068_Dialog_Scan_CLI.t
-t/069_Dialog_Scan_CLI.t
+t/0614_Dialog_Scan_Sane.t
+t/0621_Dialog_Scan_CLI.t
+t/0622_Dialog_Scan_CLI.t
+t/0623_Dialog_Scan_CLI.t
+t/0624_Dialog_Scan_CLI.t
+t/0625_Dialog_Scan_CLI.t
+t/0626_Dialog_Scan_CLI.t
+t/0627_Dialog_Scan_CLI.t
 t/07_Dialog_Renumber.t
 t/08_Frontend_CLI.t
 t/09_NetPBM.t
