@@ -6,6 +6,7 @@
   Closes LP: #1197264 (wrong icons in toolbar)
 * + threshold as part of OCR process
 * Fix bug saving encoded characters in hOCR
+* Fix bug saving defaults that are not part of a profile
 
 
 1.2.6 (27.09.2014):
